--- a/test-output/old/Default Suite/methods-alphabetical.html
+++ b/test-output/old/Default Suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8dacdf">  <td>18/08/23 09:34:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="bzjAPITest.test1()[pri:0, instance:APITest.bzjAPITest@15975490]">test1</td> 
-  <td>main@2081303229</td>   <td></td> </tr>
+<tr bgcolor="649faf">  <td>18/08/23 11:25:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="bzjAPITest.test1()[pri:0, instance:APITest.bzjAPITest@47f6473]">test1</td> 
+  <td>main@1014328909</td>   <td></td> </tr>
+<tr bgcolor="649faf">  <td>18/08/23 11:25:06</td>   <td>2374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="bzjAPITest.test2()[pri:0, instance:APITest.bzjAPITest@47f6473]">test2</td> 
+  <td>main@1014328909</td>   <td></td> </tr>
 </table>
